--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: panelappR
 Title: What the Package Does (one line, title case)
-Version: 0.0.0
+Version: 0.0.1
 Authors@R: person ("David", "Montaner", email = "david.montaner@gmail.com", role = c ("aut", "cre"))
 Description: What the package does (one paragraph).
 Depends:
@@ -8,8 +8,10 @@ Depends:
 Imports:
     utils,
     jsonlite,
-    biomaRt,
-    openxlsx
+    reshape,
+    openxlsx,
+    RSQLite,
+    biomaRt
 License: GPL-2
 Encoding: UTF-8
 LazyData: true
@@ -22,4 +24,4 @@ Suggests:
     knitr,
     rmarkdown
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
